{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 104,
  "lineage": "faf6c1de-e9ed-2098-7016-a61fb95d0517",
  "resources": [
    {
      "module": "module.webserver_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2Instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032598fcc7e9d1c7a",
            "arn": "arn:aws:ec2:eu-west-2:718122351819:instance/i-00af3d34596f5f7d4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00af3d34596f5f7d4",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e003d5f582e685d",
            "private_dns": "ip-10-0-1-229.eu-west-2.compute.internal",
            "private_ip": "10.0.1.229",
            "public_ip": "18.133.26.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05a57d40b950821b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebbd20bbbcfc9893",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03fc9cef6aea8e2f5"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.publicsubnet",
            "module.aws_vpc.aws_vpc.VPC",
            "module.aws_webserver_sg.aws_security_group.wsg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:718122351819:internet-gateway/igw-0c91edb6c42828a1e",
            "id": "igw-0c91edb6c42828a1e",
            "owner_id": "718122351819",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-0e63479a6b57f45ba"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05c78d7f823e3896d",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c91edb6c42828a1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0e63479a6b57f45ba"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0183660fb45613b2a",
            "route_table_id": "rtb-05c78d7f823e3896d",
            "subnet_id": "subnet-0ebbd20bbbcfc9893"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.publicsubnet",
            "module.aws_vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_webserver_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:718122351819:security-group/sg-03fc9cef6aea8e2f5",
            "description": "Allow SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fc9cef6aea8e2f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSG",
            "name_prefix": null,
            "owner_id": "718122351819",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e63479a6b57f45ba"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:718122351819:subnet/subnet-0ebbd20bbbcfc9893",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ebbd20bbbcfc9893",
            "map_public_ip_on_launch": false,
            "owner_id": "718122351819",
            "vpc_id": "vpc-0e63479a6b57f45ba"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:718122351819:vpc/vpc-0e63479a6b57f45ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8d99ebfc817cac6",
            "default_route_table_id": "rtb-0849a09080edeb5e1",
            "default_security_group_id": "sg-09e32949ad05b328a",
            "dhcp_options_id": "dopt-2d301745",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e63479a6b57f45ba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0849a09080edeb5e1",
            "owner_id": "718122351819"
          }
        }
      ]
    }
  ]
}